--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactportfolio",
   "version": "0.1.0",
-  "homepage": "https://joy-hui.github.io/reactportfolio/",
+  "homepage": "https://joy-hui.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
